log
Fri Mar 27 12:13:57 AM UTC 2026: 
 tests:  0|6
total_score: 0/60
b1981e4
Fri Mar 27 12:34:18 AM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
68eeb9e
Fri Mar 27 12:37:15 AM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
dc7994f
Fri Mar 27 12:38:30 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fd5f2ec
Fri Mar 27 12:49:28 AM UTC 2026: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:55:5: error: ‘else’ without a previous ‘if’
   55 |     else return NULL;
      |     ^~~~
469b65a
